[gd_scene load_steps=75 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://z1939_nimatron/assets/art/light_yellow/light_yellow_1.tres" type="Texture" id=2]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_0.tres" type="Texture" id=3]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_6.tres" type="Texture" id=4]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_7.tres" type="Texture" id=5]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_8.tres" type="Texture" id=6]
[ext_resource path="res://z1939_nimatron/assets/art/light_yellow/light_yellow_5.tres" type="Texture" id=7]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_1.tres" type="Texture" id=8]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_7.tres" type="Texture" id=9]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_9.tres" type="Texture" id=10]
[ext_resource path="res://z1939_nimatron/assets/art/light_red/light_red.tres" type="Texture" id=11]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_8.tres" type="Texture" id=12]
[ext_resource path="res://z1939_nimatron/assets/art/light_yellow/light_yellow_0.tres" type="Texture" id=13]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_9.tres" type="Texture" id=14]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_11.tres" type="Texture" id=15]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_10.tres" type="Texture" id=16]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_2.tres" type="Texture" id=17]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_14.tres" type="Texture" id=18]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_15.tres" type="Texture" id=19]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_17.tres" type="Texture" id=20]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_0.tres" type="Texture" id=21]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_11.tres" type="Texture" id=22]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_1.tres" type="Texture" id=23]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_5.tres" type="Texture" id=24]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_2.tres" type="Texture" id=25]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_3.tres" type="Texture" id=26]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_4.tres" type="Texture" id=27]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_4.tres" type="Texture" id=28]
[ext_resource path="res://z1939_nimatron/assets/art/light_yellow/light_yellow_3.tres" type="Texture" id=29]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_5.tres" type="Texture" id=30]
[ext_resource path="res://z1939_nimatron/assets/art/light_yellow/light_yellow_2.tres" type="Texture" id=31]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_16.tres" type="Texture" id=32]
[ext_resource path="res://z1939_nimatron/assets/art/light_yellow/light_yellow_4.tres" type="Texture" id=33]
[ext_resource path="res://z1939_nimatron/assets/art/light_green/light_green_10.tres" type="Texture" id=34]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_12.tres" type="Texture" id=35]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_6.tres" type="Texture" id=36]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_3.tres" type="Texture" id=37]
[ext_resource path="res://z1939_nimatron/assets/art/light_blue/light_blue_13.tres" type="Texture" id=38]
[ext_resource path="res://z1939_nimatron/assets/texts/who_extenguishes.tres" type="Texture" id=40]
[ext_resource path="res://z1939_nimatron/assets/texts/az_nimatron_says.tres" type="Texture" id=41]
[ext_resource path="res://z1939_nimatron/assets/texts/the_last_light_wins.tres" type="Texture" id=42]
[ext_resource path="res://z1939_nimatron/assets/art/submit_button/submit_button_green.tres" type="Texture" id=43]
[ext_resource path="res://z1939_nimatron/assets/art/submit_button/submit_button_red.tres" type="Texture" id=44]
[ext_resource path="res://submit_button.gd" type="Script" id=45]
[ext_resource path="res://z1939_nimatron/assets/art/stars/star_on_2.tres" type="Texture" id=46]
[ext_resource path="res://z1939_nimatron/assets/art/stars/star_off_2.tres" type="Texture" id=47]
[ext_resource path="res://z1939_nimatron/assets/art/stars/star_off_0.tres" type="Texture" id=48]
[ext_resource path="res://z1939_nimatron/assets/art/stars/star_on_0.tres" type="Texture" id=49]
[ext_resource path="res://z1939_nimatron/assets/art/stars/star_off_1.tres" type="Texture" id=50]
[ext_resource path="res://z1939_nimatron/assets/art/stars/star_on_1.tres" type="Texture" id=51]
[ext_resource path="res://z1939_nimatron/assets/Oglsdl-Dr8v2.wav" type="AudioStream" id=52]
[ext_resource path="res://Particles2DRoot.tscn" type="PackedScene" id=53]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=2]
resource_name = "Charging"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Star0:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ "On" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Star1:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ "On" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Star2:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ "On" ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Star0:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "On", "Off" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Star1:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "On", "Off" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Star2:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "On", "Off" ]
}

[sub_resource type="Animation" id=4]
resource_name = "Off"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Star0:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Off" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Star1:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Off" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Star2:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Off" ]
}

[sub_resource type="Animation" id=5]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Star0:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "On", "Off" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Star1:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Off", "On", "Off" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Star2:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Off", "On", "Off" ]
}

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 48 ) ],
"loop": false,
"name": "Off",
"speed": 0.0
}, {
"frames": [ ExtResource( 49 ) ],
"loop": false,
"name": "On",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 50 ) ],
"loop": false,
"name": "Off",
"speed": 0.0
}, {
"frames": [ ExtResource( 51 ) ],
"loop": false,
"name": "On",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 47 ) ],
"loop": false,
"name": "Off",
"speed": 0.0
}, {
"frames": [ ExtResource( 46 ) ],
"loop": false,
"name": "On",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 43 ) ],
"loop": false,
"name": "Red",
"speed": 0.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": false,
"name": "Green",
"speed": 0.0
} ]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="Animation" id=15]
resource_name = "Anim"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Game/Line3/light_bulb_0:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.2 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Set"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Game/Line3/light_bulb_0:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Anim"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Game/Line3/light_bulb_0:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.2 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Set"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Game/Line3/light_bulb_0:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Anim"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Game/Line3/light_bulb_0:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.2 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Set"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Game/Line3/light_bulb_0:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "Anim"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Game/Line3/light_bulb_0:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.2 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Set"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Game/Line3/light_bulb_0:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 1, 0.741176, 0.0509804 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Purticles2" type="Node2D" parent="."]
position = Vector2( 300, 300 )
scale = Vector2( 0.05, 0.05 )

[node name="Particles2DRoot" parent="Purticles2" instance=ExtResource( 53 )]

[node name="Particles2DRoot2" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -0.261799

[node name="Particles2DRoot3" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -0.523598

[node name="Particles2DRoot4" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -0.785397

[node name="Particles2DRoot5" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -1.0472

[node name="Particles2DRoot6" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -1.309

[node name="Particles2DRoot7" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -1.57079

[node name="Particles2DRoot8" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -1.83259

[node name="Particles2DRoot9" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -2.09439

[node name="Particles2DRoot10" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -2.35619

[node name="Particles2DRoot11" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -2.61799

[node name="Particles2DRoot12" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -2.87979

[node name="Particles2DRoot13" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -3.14159

[node name="Particles2DRoot14" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -3.40339

[node name="Particles2DRoot15" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -3.66519

[node name="Particles2DRoot16" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -3.92699

[node name="Particles2DRoot17" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -4.18878

[node name="Particles2DRoot18" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -4.45058

[node name="Particles2DRoot19" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -4.71238

[node name="Particles2DRoot20" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -4.97418

[node name="Particles2DRoot21" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -5.23598

[node name="Particles2DRoot22" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -5.49778

[node name="Particles2DRoot23" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -5.75958

[node name="Particles2DRoot24" parent="Purticles2" instance=ExtResource( 53 )]
rotation = -6.02138

[node name="Game" type="Node2D" parent="."]
position = Vector2( 300, 300 )
rotation = 4.46638e-06
scale = Vector2( 0.14, 0.14 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Line0" type="Node2D" parent="Game"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="light_bulb" type="Sprite" parent="Game/Line0"]
texture = ExtResource( 11 )

[node name="Line1" type="Node2D" parent="Game"]
scale = Vector2( -1, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="light_bulb_0" type="Sprite" parent="Game/Line1"]
position = Vector2( -18, -396 )
texture = ExtResource( 13 )

[node name="light_bulb_1" type="Sprite" parent="Game/Line1"]
position = Vector2( 351, -180 )
texture = ExtResource( 2 )

[node name="light_bulb_2" type="Sprite" parent="Game/Line1"]
position = Vector2( 333, 198 )
texture = ExtResource( 31 )

[node name="light_bulb_3" type="Sprite" parent="Game/Line1"]
position = Vector2( 0, 369 )
texture = ExtResource( 29 )

[node name="light_bulb_4" type="Sprite" parent="Game/Line1"]
position = Vector2( -342, 171 )
texture = ExtResource( 33 )

[node name="light_bulb_5" type="Sprite" parent="Game/Line1"]
position = Vector2( -342, -162 )
texture = ExtResource( 7 )

[node name="Line2" type="Node2D" parent="Game"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="light_bulb_0" type="Sprite" parent="Game/Line2"]
position = Vector2( 0, -783 )
texture = ExtResource( 3 )

[node name="light_bulb_1" type="Sprite" parent="Game/Line2"]
position = Vector2( 414, -657 )
texture = ExtResource( 23 )

[node name="light_bulb_2" type="Sprite" parent="Game/Line2"]
position = Vector2( 693, -360 )
texture = ExtResource( 17 )

[node name="light_bulb_3" type="Sprite" parent="Game/Line2"]
position = Vector2( 783, 0 )
texture = ExtResource( 26 )

[node name="light_bulb_4" type="Sprite" parent="Game/Line2"]
position = Vector2( 675, 351 )
texture = ExtResource( 28 )

[node name="light_bulb_5" type="Sprite" parent="Game/Line2"]
position = Vector2( 414, 648 )
texture = ExtResource( 24 )

[node name="light_bulb_6" type="Sprite" parent="Game/Line2"]
position = Vector2( 18, 774 )
texture = ExtResource( 4 )

[node name="light_bulb_7" type="Sprite" parent="Game/Line2"]
position = Vector2( -378, 702 )
texture = ExtResource( 5 )

[node name="light_bulb_8" type="Sprite" parent="Game/Line2"]
position = Vector2( -648, 405 )
texture = ExtResource( 6 )

[node name="light_bulb_9" type="Sprite" parent="Game/Line2"]
position = Vector2( -783, 0 )
texture = ExtResource( 10 )

[node name="light_bulb_10" type="Sprite" parent="Game/Line2"]
position = Vector2( -702, -378 )
texture = ExtResource( 34 )

[node name="light_bulb_11" type="Sprite" parent="Game/Line2"]
position = Vector2( -405, -648 )
texture = ExtResource( 15 )

[node name="Line3" type="Node2D" parent="Game"]
scale = Vector2( -1, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="light_bulb_0" type="Sprite" parent="Game/Line3"]
position = Vector2( -18, -1134 )
texture = ExtResource( 21 )

[node name="light_bulb_1" type="Sprite" parent="Game/Line3"]
position = Vector2( 396, -1071 )
texture = ExtResource( 8 )

[node name="light_bulb_2" type="Sprite" parent="Game/Line3"]
position = Vector2( 747, -873 )
texture = ExtResource( 25 )

[node name="light_bulb_3" type="Sprite" parent="Game/Line3"]
position = Vector2( 1008, -576 )
texture = ExtResource( 37 )

[node name="light_bulb_4" type="Sprite" parent="Game/Line3"]
position = Vector2( 1125, -180 )
texture = ExtResource( 27 )

[node name="light_bulb_5" type="Sprite" parent="Game/Line3"]
position = Vector2( 1107, 198 )
texture = ExtResource( 30 )

[node name="light_bulb_6" type="Sprite" parent="Game/Line3"]
position = Vector2( 1026, 549 )
texture = ExtResource( 36 )

[node name="light_bulb_7" type="Sprite" parent="Game/Line3"]
position = Vector2( 765, 855 )
z_index = -1
texture = ExtResource( 9 )

[node name="light_bulb_8" type="Sprite" parent="Game/Line3"]
position = Vector2( 432, 1053 )
texture = ExtResource( 12 )

[node name="light_bulb_9" type="Sprite" parent="Game/Line3"]
position = Vector2( 36, 1161 )
texture = ExtResource( 14 )

[node name="light_bulb_10" type="Sprite" parent="Game/Line3"]
position = Vector2( -378, 1071 )
texture = ExtResource( 16 )

[node name="light_bulb_11" type="Sprite" parent="Game/Line3"]
position = Vector2( -756, 864 )
texture = ExtResource( 22 )

[node name="light_bulb_12" type="Sprite" parent="Game/Line3"]
position = Vector2( -1008, 495 )
texture = ExtResource( 35 )

[node name="light_bulb_13" type="Sprite" parent="Game/Line3"]
position = Vector2( -1134, 135 )
texture = ExtResource( 38 )

[node name="light_bulb_14" type="Sprite" parent="Game/Line3"]
position = Vector2( -1134, -243 )
texture = ExtResource( 18 )

[node name="light_bulb_15" type="Sprite" parent="Game/Line3"]
position = Vector2( -1035, -594 )
texture = ExtResource( 19 )

[node name="light_bulb_16" type="Sprite" parent="Game/Line3"]
position = Vector2( -738, -864 )
z_index = -1
texture = ExtResource( 32 )

[node name="light_bulb_17" type="Sprite" parent="Game/Line3"]
position = Vector2( -414, -1071 )
z_index = -1
texture = ExtResource( 20 )

[node name="Texts" type="Node2D" parent="."]
scale = Vector2( 0.14, 0.14 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="az_nimatron_says" type="Sprite" parent="Texts"]
position = Vector2( 1638, 396 )
texture = ExtResource( 41 )
__meta__ = {
"_edit_lock_": true
}

[node name="who_extenguishes" type="Sprite" parent="Texts"]
position = Vector2( 425, 1950 )
rotation = -1.5708
texture = ExtResource( 40 )
__meta__ = {
"_edit_lock_": true
}

[node name="the_last_light_wins" type="Sprite" parent="Texts"]
position = Vector2( 1674, 3915 )
texture = ExtResource( 42 )
__meta__ = {
"_edit_lock_": true
}

[node name="Stars" type="Node2D" parent="."]
position = Vector2( 555, 300 )
scale = Vector2( 0.14, 0.14 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Stars"]
anims/Charging = SubResource( 2 )
anims/Initiate = SubResource( 3 )
anims/Off = SubResource( 4 )
anims/Thinking = SubResource( 5 )

[node name="Star0" type="AnimatedSprite" parent="Stars"]
position = Vector2( -13.5, -324 )
frames = SubResource( 6 )
animation = "Off"

[node name="Star1" type="AnimatedSprite" parent="Stars"]
position = Vector2( -13.5, 0 )
frames = SubResource( 7 )
animation = "Off"

[node name="Star2" type="AnimatedSprite" parent="Stars"]
position = Vector2( 0, 324 )
frames = SubResource( 8 )
animation = "Off"

[node name="CircleInput" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 110.0
margin_top = 110.0
margin_right = -110.0
margin_bottom = -110.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="P0" type="Position2D" parent="CircleInput"]
position = Vector2( 220, 190 )
__meta__ = {
"_edit_lock_": true
}

[node name="P1" type="Position2D" parent="CircleInput"]
position = Vector2( 273.5, 190 )
__meta__ = {
"_edit_lock_": true
}

[node name="P2" type="Position2D" parent="CircleInput"]
position = Vector2( 322.3, 190 )
__meta__ = {
"_edit_lock_": true
}

[node name="P3" type="Position2D" parent="CircleInput"]
position = Vector2( 380, 190 )
__meta__ = {
"_edit_lock_": true
}

[node name="Submit" type="AnimatedSprite" parent="."]
position = Vector2( 517.5, 491.25 )
rotation = -0.349066
scale = Vector2( 0.14, 0.14 )
frames = SubResource( 9 )
animation = "Red"
script = ExtResource( 45 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="SubmitButton" type="Button" parent="Submit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -202.5
margin_right = -540.0
margin_bottom = -202.5
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 300, 300 )
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 52 )
autoplay = true
mix_target = 1

[node name="LineAnimationPlayer1" type="AnimationPlayer" parent="."]
anims/Anim = SubResource( 15 )
anims/Set = SubResource( 16 )

[node name="LineAnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Anim = SubResource( 17 )
anims/Set = SubResource( 18 )

[node name="LineAnimationPlayer3" type="AnimationPlayer" parent="."]
anims/Anim = SubResource( 19 )
anims/Set = SubResource( 20 )

[node name="LineAnimationPlayer4" type="AnimationPlayer" parent="."]
anims/Anim = SubResource( 21 )
anims/Set = SubResource( 22 )

[connection signal="gui_input" from="CircleInput" to="." method="_on_CircleInput_gui_input" flags=3]
[connection signal="button_down" from="Submit/SubmitButton" to="." method="_on_SubmitButton_button_down" flags=3]
[connection signal="button_down" from="Submit/SubmitButton" to="Submit" method="down" flags=3]
[connection signal="button_up" from="Submit/SubmitButton" to="." method="_on_SubmitButton_button_up" flags=3]
[connection signal="button_up" from="Submit/SubmitButton" to="Submit" method="up"]
[connection signal="pressed" from="Submit/SubmitButton" to="." method="_on_SubmitButton_pressed" flags=3]
[connection signal="animation_finished" from="LineAnimationPlayer1" to="." method="_on_LineAnimation_animation_finished" flags=3 binds= [ 0 ]]
[connection signal="animation_finished" from="LineAnimationPlayer2" to="." method="_on_LineAnimation_animation_finished" flags=3 binds= [ 1 ]]
[connection signal="animation_finished" from="LineAnimationPlayer3" to="." method="_on_LineAnimation_animation_finished" flags=3 binds= [ 2 ]]
[connection signal="animation_finished" from="LineAnimationPlayer4" to="." method="_on_LineAnimation_animation_finished" flags=3 binds= [ 3 ]]
